fix: gradient-overflow✔

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -28,8 +28,8 @@ body {
 
 .gradient{
 position: absolute;
-width: 861px;
-height: 861px;
+width: 100%;
+height: 100%;
 left: -287px;
 top: -294px;
 background: rgba(24, 100, 255, 0.2);
